typescript/checker/tests/conformance/async/es6/awaitClassExpression_es6.ts.stderr
error: unimplemented
expand_export_info(Promise)
File: $DIR/tests/conformance/async/es6/awaitClassExpression_es6.ts
 --> $DIR/tests/conformance/async/es6/awaitClassExpression_es6.ts:6:1
  |
6 | / async function func(): Promise<void> {
7 | |     class D extends (await p) {
8 | |     }
9 | | }
  | |_^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            121,
        ),
        hi: BytePos(
            136,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es6/awaitClassExpression_es6.ts:6:22
  |
6 | async function func(): Promise<void> {
  |                      ^^^^^^^^^^^^^^^

